better message parsing